@@ -99,9 +99,6 @@
     <Filter Include="zlib">
       <UniqueIdentifier>{96351f00-f848-4e75-84be-0bccaecc2a02}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Devices\Forecast.io">
-      <UniqueIdentifier>{739f5460-5c88-47ba-8cd1-d94035c1819d}</UniqueIdentifier>
-    </Filter>
     <Filter Include="TCPProxy">
       <UniqueIdentifier>{242d77c7-709a-4c87-8d92-a87a489af891}</UniqueIdentifier>
     </Filter>
@@ -440,6 +437,9 @@
     </Filter>
     <Filter Include="Devices\HEOS">
       <UniqueIdentifier>{43faa747-76f8-47a8-a90b-ebcb30a1f72e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Devices\DarkSky">
+      <UniqueIdentifier>{739f5460-5c88-47ba-8cd1-d94035c1819d}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -1507,9 +1507,6 @@
     <ClInclude Include="..\main\GZipHelper.h">
       <Filter>zlib</Filter>
     </ClInclude>
-    <ClInclude Include="..\hardware\ForecastIO.h">
-      <Filter>Devices\Forecast.io</Filter>
-    </ClInclude>
     <ClInclude Include="..\hardware\ASyncSerial.h">
       <Filter>Devices\SerialTCP</Filter>
     </ClInclude>
@@ -1638,7 +1635,7 @@
     </ClInclude>
     <ClInclude Include="..\notifications\NotificationPushsafer.h">
       <Filter>Notifications</Filter>
-    </ClInclude>	
+    </ClInclude>
     <ClInclude Include="..\notifications\NotificationSMS.h">
       <Filter>Notifications</Filter>
     </ClInclude>
@@ -1906,6 +1903,9 @@
     <ClInclude Include="..\hardware\HEOS.h">
       <Filter>Devices\HEOS</Filter>
     </ClInclude>
+    <ClInclude Include="..\hardware\DarkSky.h">
+      <Filter>Devices\DarkSky</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\webserver\Base64.cpp">
@@ -2091,9 +2091,6 @@
     <ClCompile Include="..\hardware\1Wire\1WireByOWFS.cpp">
       <Filter>Devices\1-Wire</Filter>
     </ClCompile>
-    <ClCompile Include="..\hardware\ForecastIO.cpp">
-      <Filter>Devices\Forecast.io</Filter>
-    </ClCompile>
     <ClCompile Include="..\hardware\ASyncSerial.cpp">
       <Filter>Devices\SerialTCP</Filter>
     </ClCompile>
@@ -2201,7 +2198,7 @@
     </ClCompile>
     <ClCompile Include="..\notifications\NotificationPushsafer.cpp">
       <Filter>Notifications</Filter>
-    </ClCompile>	
+    </ClCompile>
     <ClCompile Include="..\notifications\NotificationSMS.cpp">
       <Filter>Notifications</Filter>
     </ClCompile>
@@ -2501,6 +2498,9 @@
     </ClCompile>
     <ClCompile Include="..\hardware\HEOS.cpp">
       <Filter>Devices\HEOS</Filter>
+    </ClCompile>
+    <ClCompile Include="..\hardware\DarkSky.cpp">
+      <Filter>Devices\DarkSky</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
